--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,21 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>SpinnersDemo</title>
+  <title>Protractor utilities demo</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
   <app-root>
     <div class="container">
       <div class="row">
         <div id="loader">
-            <div class="dot"></div>
+          <div class="dot"></div>
           <div class="dot"></div>
           <div class="dot"></div>
           <div class="dot"></div>
@@ -27,4 +29,5 @@
     </div>
   </app-root>
 </body>
+
 </html>
