--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,19 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
-  <title>Protractor utilities demo</title>
+  <title>SpinnersDemo</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-
 <body>
   <app-root>
     <div class="container">
       <div class="row">
         <div id="loader">
-          <div class="dot"></div>
+            <div class="dot"></div>
           <div class="dot"></div>
           <div class="dot"></div>
           <div class="dot"></div>
@@ -29,5 +27,4 @@
     </div>
   </app-root>
 </body>
-
 </html>
